# bytes16

./: README.md  bytes16.cabal  makefile
app/: Main.hs
bench/: Bench.hs
src/Data/Primitive/ByteArray/: Base16.hs
test/: Test.hs
