cabal-version:      2.2
category:           Data
build-type:         Simple

name:               bytes16
synopsis:           
version:            0.1.0

author:             Callan McGill
maintainer:         callan.mcgill@gmail.com
homepage:           https://github.com/Boarders/bytes16
bug-reports:        https://github.com/Boarders/bytes16/issues
copyright:          2020
license:            BSD-3-Clause
description:
    .
    TODO
    .
    @
    @

source-repository head
  type:     git
  location: https://github.com/Boarders/bytes-16

executable base16

  type:
    exitcode-stdio-1.0

  main-is:
    Main.hs

  hs-source-dirs:
    app

  ghc-options:
    -Wall
    -Wincomplete-patterns
    -fllvm

  build-depends:
    , bytes16
    , base
    , primitive
    , base16-bytestring
    , base16
    , bytes16
    , bytestring





Library

  hs-source-dirs:
      src

  ghc-options:
     -Wall
     -fllvm

  build-depends:
    , base
    , ghc-prim
    , primitive

    
  exposed-modules:
      Data.Primitive.ByteArray.Base16

  other-modules:

  default-language:
      Haskell2010


Test-Suite testsuite

  type:
      exitcode-stdio-1.0

  main-is:
      Test.hs

  hs-source-dirs:
      test

  ghc-options:
     -Wall
     -Wincomplete-patterns

  build-depends:    
    , base
    , QuickCheck
    , tasty
    , tasty-quickcheck
    , quickcheck-instances
    , base16-bytestring
    , base16
    , bytes16
    , bytestring
    , primitive


  other-modules:

  default-language:
      Haskell2010

benchmark bench16

  default-language:
    Haskell2010

  main-is:
    Bench.hs

  type:
    exitcode-stdio-1.0  
    
  ghc-options:
   -threaded
   -Wall
   -fllvm
   -O2

  hs-source-dirs:
    bench
  
  build-depends:
    , bytes16
    , base
    , criterion
    , deepseq
    , base16-bytestring
    , base16
    , bytestring
    , primitive
    

  other-modules:


